--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div id="bodyContainer">
         <h1 class="mb-4 text-center"> Let's find your favourite movie</h1>
         <form class="form-row justify-content-center">
-            <input type="text", placeholder="Enter movie name..." name="query" class="form-control col-4">
+            <input type="text", placeholder="Enter movie name..." name="movieName" class="form-control col-4" autofocus>
             <button class="btn btn-success" style="margin-left: 10px;">Search</button>
         </form>
     </div>
