Fetched and Displayed Queries for Movies

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <body>
     <div id="bodyContainer">
         <h1 class="mb-4 text-center"> Let's find your favourite movie</h1>
-        <form class="form-row justify-content-center">
+        <form class="form-row justify-content-center" method="GET" action="/results">
             <input type="text", placeholder="Enter movie name..." name="movieName" class="form-control col-4" autofocus>
             <button class="btn btn-success" style="margin-left: 10px;">Search</button>
         </form>
