--- a/views/results.ejs
+++ b/views/results.ejs
@@ -9,27 +9,27 @@
     <title>Search Results</title>
 </head>
 <body>
-    <div class="container">
-        <div class="make-center mt-5 mb-5">
-            <h1 class=" " id="headerTop">Results <span id="resultsArrow">>></span> <%= query %></h1>
+    <div class="container" style="padding: 0px 100px;">
+        <div class="make-center mt-5 mb-5 ml-3">
+            <h2 class="" id="headerTop">Results <span id="resultsArrow">for >>></span> "<%= query.toUpperCase() %>"</h2>
         </div>
-        <div class="row row-cols-1 row-cols-md-2">
+        <!-- <div class="row row-cols-1 row-cols-md-2"> -->
+        <div class="ml-2">
             <% movies.forEach((movie) => {%>
-                <div class="col mb-5 w-75"  style="max-height: 90%;">
-                    <div class="card">
+                <div class="col mb-5">
+                    <div class="card" style="width: 90%;">
                         <div class="row no-gutters">
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <img src="https://image.tmdb.org/t/p/w200<%= movie.poster %>" class="card-img img-fluid" alt="...">
                             </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h4 class="card-title"><%= movie.title %></h5>
+                            <div class="col-md-9">
+                                <div class="card-body mb-2" style="height: 87%;">
+                                    <h4 class="card-title"><%= movie.title %></h4>
                                     <hr>
-                                    <p class="card-text"><%= movie.summary.substring(0,130) %><a href="">...read more</a></p>
-                                    <hr>
-                                    <small class="card-text" style="width: auto;position: relative;">Votes: <%= movie.votes %><span class="rating">Rating: <%= movie.ratings%></span></small>
+                                    <p class="card-text" style="height:65%;"><%= movie.summary.substring(0,390) %><a href="">...read more</a></p>
+                                    <small class="mb-0">Total votes: <%= movie.votes %><span class="rating">Rating: <%= movie.ratings%></span></small>
                                 </div>
-                                <div class="card-footer" style="width: 100%;position: absolute;bottom:0;">
+                                <div class="card-footer" style="margin-top:0px;width: 100%;position: absolute;bottom:0;">
                                     <small class="text-muted"><span style="float:left;">Released on <%= movie.date %></span><a href="#" style="float:right;">View more...</a> 
                                     </small></div>
                             </div>
